[metadata]
name = 'ee-hardware'
version = '0.0.1'
description = ''
author = 'Leonard Holst'
author_email = 'holst@geoplex.de'
license = 'MIT'
url = 'https://github.com/LHolst/ee-hardware'

[requires]
python_version = ['3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
